SERVER-73897 Resharding coordinator logs correct abort status after failover recovery (#21563)

GitOrigin-RevId: eedb627886fe3b5a3e4df5a4604bb0ddcfcf3412